--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@endemolshinegroup/cz-github",
+  "name": "@gitodo/cz-github",
   "description": "A Commitizen adapter for GitHub",
   "version": "2.0.0",
   "license": "MIT",
